src/snapshots/pq__tui__snapshots__analyze_completed.snap
---
source: src/tui.rs
assertion_line: 3688
---
┌ Columns · 3 ─────────────┐┌ Query · 12 ms ─────────────────────────────────────────────────────────────────┐
│▶ ★ id  BIGINT            ││ try: '.email, .country where .country == "US"' or 'group_by .country | count'  │
│    country  VARCHAR      ││                                                                                │
│    revenue  DOUBLE       ││                                                                                │
│                          ││                                                                                │
│                          │└────────────────────────────────────────────────────────────────────────────────┘
│                          │┌ Data · 3 of 3 rows shown ──────────────────────────────────────────────────────┐
│                          ││country  revenue                                                                │
│                          ││US        100.50                                                                │
│                          ││DE         85.00                                                                │
│                          ││JP         63.20                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          │└────────────────────────────────────────────────────────────────────────────────┘
└──────────────────────────┘┌ Explain · ANALYZE  15.2 ms ────────────────────────────────────────────────────┐
┌ Filters · 0 ─────────────┐│1 scan(s)  •  1.1k actual rows  •  1 filter(s) pushed  •  2 projection(s)       │
│(none — type `where .col =││  ✓ predicate pushdown: country='US'                                            │
│                          ││  ✓ projection pushdown: 2 col(s) country, revenue                              │
│                          ││  ● actual 1.1k rows  (estimated ~1.2k)                                         │
│                          ││  ● scanned 3 files                                                             │
│                          ││                                                                                │
└──────────────────────────┘└────────────────────────────────────────────────────────────────────────────────┘
 Tab next │ ␣ toggle │ ⏎ append/drill │ ⌫ undo │ Q exit+print │ Esc quit │ : SQL │ e Explain │ E ANALYZE │ ? h
