src/snapshots/pq__tui__snapshots__completion_popup.snap
---
source: src/tui.rs
assertion_line: 3807
---
┌ Columns · 3 ─────────────┐┌ Query · 12 ms ───────────────────────────────────────────────────────┐
│▶   id  BIGINT            ││.co                                                                   │
│    country  VARCHAR      ││   ┌ .co · 1 match┐                                                   │
│    revenue  DOUBLE       ││   │country       │                                                   │
│                          ││   └──────────────┘                                                   │
│                          │└──────────────────────────────────────────────────────────────────────┘
│                          │┌ Data · 3 rows ───────────────────────────────────────────────────────┐
│                          ││country  revenue                                                      │
│                          ││US        100.50                                                      │
│                          ││DE         85.00                                                      │
│                          ││JP         63.20                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
└──────────────────────────┘│                                                                      │
┌ Filters · 0 ─────────────┐│                                                                      │
│(none — type `where .col =││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
 ↑↓ pick · ⏎/Tab insert · Esc cancel · keep typing to filter
