src/snapshots/pq__tui__snapshots__empty.snap
---
source: src/tui.rs
assertion_line: 3624
---
┌ Columns · 3 ─────────────┐┌ Query · 0 ms ────────────────────────────────────────────────────────┐
│▶ ★ id  BIGINT            ││ try: '.email, .country where .country == "US"' or 'group_by .country │
│    country  VARCHAR      ││                                                                      │
│    revenue  DOUBLE       ││                                                                      │
│                          ││                                                                      │
│                          │└──────────────────────────────────────────────────────────────────────┘
│                          │┌ Data · 0 of 0 rows shown ────────────────────────────────────────────┐
│                          ││(no rows)                                                             │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
└──────────────────────────┘│                                                                      │
┌ Filters · 0 ─────────────┐│                                                                      │
│(none — type `where .col =││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
 Tab next │ ␣ toggle │ ⏎ append/drill │ ⌫ undo │ Q exit+print │ Esc quit │ : SQL │ e Explain │ E ANA
