src/snapshots/pq__tui__snapshots__explain_panel_estimates.snap
---
source: src/tui.rs
assertion_line: 3666
---
┌ Columns · 3 ─────────────┐┌ Query · 12 ms ─────────────────────────────────────────────────────────────────┐
│▶ ★ id  BIGINT            ││ try: '.email, .country where .country == "US"' or 'group_by .country | count'  │
│    country  VARCHAR      ││                                                                                │
│    revenue  DOUBLE       ││                                                                                │
│                          ││                                                                                │
│                          │└────────────────────────────────────────────────────────────────────────────────┘
│                          │┌ Data · 3 of 3 rows shown ──────────────────────────────────────────────────────┐
│                          ││country  revenue                                                                │
│                          ││US        100.50                                                                │
│                          ││DE         85.00                                                                │
│                          ││JP         63.20                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          ││                                                                                │
│                          │└────────────────────────────────────────────────────────────────────────────────┘
└──────────────────────────┘┌ Explain · `e` toggle / `E` ANALYZE ────────────────────────────────────────────┐
┌ Filters · 0 ─────────────┐│1 scan(s)  •  ~1.2k estimated rows  •  1 filter(s) pushed  •  2 projection(s)   │
│(none — type `where .col =││  ✓ predicate pushdown: country='US'                                            │
│                          ││  ✓ projection pushdown: 2 col(s) country, revenue                              │
│                          ││                                                                                │
│                          ││💡  add `where .partition_date >= ...` to prune row groups                       │
│                          ││                                                                                │
└──────────────────────────┘└────────────────────────────────────────────────────────────────────────────────┘
 Tab next │ ␣ toggle │ ⏎ append/drill │ ⌫ undo │ Q exit+print │ Esc quit │ : SQL │ e Explain │ E ANALYZE │ ? h
