src/snapshots/pq__tui__snapshots__with_results.snap
---
source: src/tui.rs
assertion_line: 3636
---
┌ Columns · 3 ─────────────┐┌ Query · 12 ms ───────────────────────────────────────────────────────┐
│▶ ★ id  BIGINT            ││.country, .revenue                                                    │
│  ✓ country  VARCHAR      ││                                                                      │
│  ✓ revenue  DOUBLE       ││                                                                      │
│                          ││                                                                      │
│                          │└──────────────────────────────────────────────────────────────────────┘
│                          │┌ Data · 3 of 3 rows shown ────────────────────────────────────────────┐
│                          ││country  revenue                                                      │
│                          ││US        100.50                                                      │
│                          ││DE         85.00                                                      │
│                          ││JP         63.20                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
└──────────────────────────┘│                                                                      │
┌ Filters · 0 ─────────────┐│                                                                      │
│(none — type `where .col =││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
 Tab next │ ␣ toggle │ ⏎ append/drill │ ⌫ undo │ Q exit+print │ Esc quit │ : SQL │ e Explain │ E ANA
